# onedrive-smart-transfer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_exe.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.agents/references/: architecture.md  history.md
.agents/skills/exclusion_rules/: SKILL.md
.agents/skills/transfer_engine/: SKILL.md
.agents/skills/ui_updates/: SKILL.md
.github/workflows/: build-exe.yml  code-quality.yml  publish-pypi.yml  security-scan.yml
config/: default_exclusions.json
installer/: setup_script.iss
onedrivesmarttransfer/: app.py
onedrivesmarttransfer/core/: exclusion_manager.py  onedrive_finder.py  stack_detector.py  transfer_engine.py
onedrivesmarttransfer/ui/: drop_zone.py  file_explorer.py  main_window.py  settings_dialog.py  transfer_queue.py  transfer_summary.py
src/: __init__.py  app.py
src/core/: __init__.py  config_manager.py  exclusion_manager.py  stack_detector.py  transfer_engine.py
src/ui/: __init__.py  file_explorer.py  main_window.py  settings_dialog.py  theme_manager.py  transfer_queue.py
src/utils/: __init__.py  resource_path.py
